fix overflow on ie

--- a/src/sass/01-generic/_base.scss
+++ b/src/sass/01-generic/_base.scss
@@ -8,7 +8,6 @@ body {
   color: white; // fallback
   color: var(--font);
   font-family: "Cutive", serif;
-  font-size: 1.3vmax;
   min-height: 100%;
   width: 100%;
   transition: all 1s;
