--- a/src/sass/02-components/Editor.scss
+++ b/src/sass/02-components/Editor.scss
@@ -16,7 +16,7 @@
     background: var(--textArea);
     color: #f2f2f2; //fallback
     color: var(--textFont);
-    font-size: calc(0.6em + 0.5vmax);
+    font-size: calc(0.9em + 0.2vw);
     width: 95%;
     height: 100%;
     padding: 15px;
