--- a/src/sass/02-components/Previewer.scss
+++ b/src/sass/02-components/Previewer.scss
@@ -2,7 +2,7 @@
 .preview {
   overflow: scroll;
   overflow-x: hidden;
-  overflow-wrap: break-word;
+  word-wrap: break-word;
   margin: 0 0.2%;
   padding-right: 0.2%;
   margin-top: 100px;
@@ -32,7 +32,7 @@
 
 code {
   background: white;
-  overflow-wrap: break-word;
+  word-wrap: break-word;
   color: #e60099;
   padding: 1px 4px 2px 4px;
 }
