--- a/src/sass/02-components/Taskbar.scss
+++ b/src/sass/02-components/Taskbar.scss
@@ -14,13 +14,13 @@
     text-decoration: none;
 
   li {
-    height: 100%;
+    //height: 100%;
     border-right: 0.5px solid black;
     padding-right: 2.5%;
     margin-right: 2.5%;
   i {
     z-index: 99;
-    font-size: calc(0.9em + 1vmax);
+    font-size: calc(0.9em + 1vw);
     cursor: pointer;
     &:hover {
       transform: scale(1.2);
