--- a/src/sass/04-tools/_media-queries.scss
+++ b/src/sass/04-tools/_media-queries.scss
@@ -11,7 +11,7 @@
       flex-direction: column;
       justify-content: flex-start;
       height: 99vh;
-      &:focus-within {min-height: 1000px !important;}
+      &:focus-within {min-height: 700px !important;}
     }
   }
 
